# AgentTrust-Runtime

./: .gitignore  AgentTrust-Runtime-最终实施方案.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
benchmarks/: README.md
docs/: ARCHITECTURE.md  RELATED_WORK.md  THREAT_MODEL.md  cli.md  concepts.md  enterprise-architecture.md  getting-started.md  index.md  protocols.md  refactor-roadmap.md
examples/: langgraph_tool_adapter.py  openai_agents_sdk_adapter.py  pydantic_ai_adapter.py
schemas/: decision-v1.schema.json  evidence-v1.schema.json  policy-pack-v1.schema.json  policy-v1.schema.json  tool-spec-v1.schema.json
src/agenttrust/: __init__.py  cli.py  context_lite.py  governance.py  mcp_lite.py  memory_lite.py  schemas.py  skills_lite.py
src/agenttrust/adapters/: __init__.py
src/agenttrust/application/: __init__.py  build_context.py  governed_session.py  ports.py  restore_run.py  run_fixture.py  run_tool.py
src/agenttrust/benchmark/: __init__.py  fake_mcp_server.py  security.py
src/agenttrust/domain/: __init__.py  approvals.py  decisions.py  lifecycle.py  models.py  policy.py  protocol.py  sessions.py
src/agenttrust/groundguard_adapter/: __init__.py  mapper.py  verifier.py
src/agenttrust/integrations/: __init__.py  langgraph.py  openai_agents.py  pydantic_ai.py
tests/: test_application_use_cases.py  test_approvals.py  test_architecture_boundaries.py  test_async_runtime.py  test_cli.py  test_docs.py  test_domain_sessions.py  test_evidence_protocol.py  test_evidence_signing.py  test_examples.py  test_final_answers.py  test_gateway.py  test_git_tool.py  test_governance.py  test_groundguard_adapter.py  test_integrations.py  test_mcp_stdio.py  test_otel_export.py  test_permissions.py  test_policy_packs.py  test_policy_protocol.py  test_python_api.py  test_recovery.py  test_run_lock.py  test_sandbox.py  test_schema_conformance.py  test_security_benchmark.py  test_session_recovery.py  test_session_timeout.py  test_state_projection.py
tests/fixtures/: fake_mcp_server.py
(+58 files in other folders)
