[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttrust-runtime"
version = "0.7.0"
description = "Local-first runtime for governed agent tool execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "chasen2041maker" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "jsonschema>=4.0",
  "cryptography>=42",
]
groundguard = ["groundguard-ai>=0.1"]
signing = ["cryptography>=42"]
otel = [
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-http>=1.24",
]
openai = ["openai-agents>=0.1"]
langgraph = ["langgraph>=0.2"]
pydantic-ai = ["pydantic-ai>=0.1"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true

[project.scripts]
agenttrust = "agenttrust.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttrust"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "agenttrust/protocol_schemas"

[tool.hatch.build.targets.sdist]
include = ["src/agenttrust", "schemas", "README.md", "README_zh.md", "CHANGELOG.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
